fix attribute controller and create option
