# src/controllers/property.controller.ts
@@ -13,13 +13,14 @@ import { Specifications } from "../entity/Specifications";
 import { EntitySpecification, SpecificationsValue } from "../entity/SpecificationsValue";
 import { validator } from "../helper/validation/validator";
 import { addPropertySchema } from "../helper/validation/schema/addPropertySchema";
+import { BrokerOffice } from "../entity/BrokerOffice";
 
 const propertyRepository = AppDataSource.getRepository(Property);
 const attributeRepository = AppDataSource.getRepository(Attribute);
 const attributeValueRepository = AppDataSource.getRepository(AttributeValue);
 const specificationRepository = AppDataSource.getRepository(Specifications);
 const specificationValueRepository = AppDataSource.getRepository(SpecificationsValue);
-
+const brokerOfficeRepository = AppDataSource.getRepository(BrokerOffice)
 
 export const getProperties = async (
   req: Request,
@@ -148,8 +149,7 @@ export const createProperty = async (
     const entity = lang === "ar" ? "العقار" : "property";
     const userMessage = lang === "ar" ? "المستخدم" : "user";
 
-    await validator(addPropertySchema(lang) , req.body)
-
+    await validator(addPropertySchema(lang), req.body);
 
     const {
       title_ar,
@@ -160,12 +160,11 @@ export const createProperty = async (
       status,
       price,
       area,
-      attributes,
+      attributes, 
       specifications,
       long,
       lat,
     } = req.body;
-
 
     const userId = req["currentUser"].id;
     const user = await AppDataSource.getRepository(User).findOne({
@@ -179,12 +178,16 @@ export const createProperty = async (
       );
     }
 
+
+    const isBrokerOffice = await brokerOfficeRepository.findOne({
+      where: { user }
+    });
+
     const images = req.files
       ? (req.files as Express.Multer.File[]).map(
           (file) => `/src/public/uploads/${file.filename}`
         )
       : [];
-
 
     const newProperty = propertyRepository.create({
       title_ar,
@@ -198,19 +201,34 @@ export const createProperty = async (
       user,
       lat,
       long,
-      images
-
+      images,
+      broker_office: isBrokerOffice || null
     });
 
     const savedProperty = await propertyRepository.save(newProperty);
 
+
+    let attributeValues = [];
     if (attributes && attributes.length > 0) {
-      const newAttributes = attributes.map(async (attr) => {
-        const attribute = await attributeRepository.findOneBy({ id: attr.id });
+      const attributePromises = attributes.map(async (attr) => {
+        const attribute = await attributeRepository.findOne({ 
+          where: { id: attr.id },
+          relations: ["parent"]
+        });
+
         if (!attribute) {
           throw new APIError(
             HttpStatusCode.NOT_FOUND,
             ErrorMessages.generateErrorMessage("السمة", "not found", lang)
+          );
+        }
+
+        if (attribute.input_type === "nested_dropdown" && !attr.selected_options) {
+          throw new APIError(
+            HttpStatusCode.BAD_REQUEST,
+            lang === "ar" 
+              ? "السمة المتداخلة تحتاج إلى تحديد الخيارات المختارة" 
+              : "Nested attribute requires selected options"
           );
         }
 
@@ -219,14 +237,16 @@ export const createProperty = async (
           entity: EntityAttribute.properties,
           entity_id: savedProperty.id,
           value: attr.value,
+          // selected_options: attr.selected_options || null
         });
       });
 
-      await attributeValueRepository.save(await Promise.all(newAttributes));
+      attributeValues = await attributeValueRepository.save(await Promise.all(attributePromises));
     }
 
+    let specificationValues = [];
     if (specifications && specifications.length > 0) {
-      const newSpecifications = specifications.map(async (spec) => {
+      const specPromises = specifications.map(async (spec) => {
         const specification = await specificationRepository.findOneBy({ id: spec.id });
         if (!specification) {
           throw new APIError(
@@ -243,12 +263,22 @@ export const createProperty = async (
         });
       });
 
-      await specificationValueRepository.save(await Promise.all(newSpecifications));
+      specificationValues = await specificationValueRepository.save(await Promise.all(specPromises));
     }
+
+    // جلب العقار مع العلاقات
+    const propertyWithRelations = await propertyRepository.findOne({
+      where: { id: savedProperty.id },
+      relations: ["attribute_values", "specification_values"]
+    });
 
     res.status(HttpStatusCode.OK_CREATED).json(
       ApiResponse.success(
-        savedProperty,
+        {
+          property: propertyWithRelations,
+          attributes: attributeValues,
+          specifications: specificationValues
+        },
         ErrorMessages.generateErrorMessage(entity, "created", lang)
       )
     );
@@ -256,7 +286,6 @@ export const createProperty = async (
     next(error);
   }
 };
-
 export const updateProperty = async (
   req: Request,
   res: Response,
