# src/entity/AttributeValue.ts
@@ -1,4 +1,4 @@
-import { Entity, PrimaryGeneratedColumn, Column, CreateDateColumn, OneToMany } from "typeorm";
+import { Entity, PrimaryGeneratedColumn, Column, CreateDateColumn, ManyToOne } from "typeorm";
 import { Attribute } from "./Attribute";
 
 @Entity("attribute_value")
@@ -6,17 +6,20 @@ export class AttributeValue {
   @PrimaryGeneratedColumn()
   id: number;
 
-  @OneToMany(() => Attribute, (attribute) => attribute.id)
+  @ManyToOne(() => Attribute, (attribute) => attribute.values)
   attribute: Attribute;
 
   @Column()
-  entity: string;
+  entity: string; 
 
   @Column()
   entity_id: number;
 
   @Column()
   value: string;
+
+  // @Column({ type: "json", nullable: true })
+  // selected_options: any;
 
   @CreateDateColumn()
   created_at: Date;
